--- a/.github/workflows/pulumi-deploy.yml
+++ b/.github/workflows/pulumi-deploy.yml
@@ -15,6 +15,7 @@ permissions:
 env:
   PULUMI_CONFIG_PASSPHRASE: ${{ secrets.PULUMI_CONFIG_PASSPHRASE }}
   PULUMI_BACKEND_URL: ${{ secrets.PULUMI_BACKEND_URL }}
+  AWS_REGION: ${{ vars.AWS_REGION }}
 
 jobs:
   pulumi-infrastructure:
@@ -46,12 +47,14 @@ jobs:
         uses: pulumi/actions@v5
         with:
           command: preview
-          stack-name: prod  
+          stack-name: prod 
+              
 
   pulumi-up:
     runs-on: ubuntu-latest
     needs: pulumi-infrastructure
-    environment: production # Environment with manual approval rules
+    if: ${{ success() }}  
+    environment: production 
     steps:
       - uses: actions/checkout@v4
 
@@ -67,7 +70,9 @@ jobs:
 
   pulumi-destroy:
     runs-on: ubuntu-latest
-    environment: production # Environment with manual approval rules
+    environment: destroy 
+    needs: pulumi-up 
+    if: ${{ success() }}  
     steps:
       - uses: actions/checkout@v4
 
